# dictate

./: .gitignore  AUDIO_ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  GEMINI_MISTRAL_IMPLEMENTATION.md  GRAMMAR_PROVIDER_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  PROVIDER_ARCHITECTURE.md  README.md  STREAMING_PROVIDER_ARCHITECTURE.md  TAURI_CHANGELOG.md  TAURI_MIGRATION_PLAN.md  TAURI_README.md  TAURI_STRUCTURE.md  VAD_IMPLEMENTATION.md  package-lock.json  package.json
electron/: package-lock.json  package.json
electron/src/main/: main.js  win-inject.js
scripts/: sync-doc-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  visualizer_manager.rs  voice_commands.rs
src-tauri/src/commands/: mod.rs  settings.rs  streaming.rs  text_injection.rs  text_rewrite.rs  transcription.rs  vad.rs
src-tauri/src/providers/: cartesia.rs  deepgram.rs  elevenlabs.rs  fireworks.rs  gemini.rs  groq.rs  inception.rs  mistral.rs  mod.rs  sambanova.rs  voxtral.rs
src-tauri/src/services/: clipboard_paste.rs  direct_typing.rs  mod.rs  windows_focus.rs  word_correction.rs
src-tauri/src/vad/: mod.rs  session_manager.rs  silero.rs
src-tauri/src/voice_commands/: de.rs  en.rs  es.rs  fr.rs  it.rs  ja.rs  mod.rs  nl.rs  pt.rs  ru.rs  zh.rs
src/main/: main.js  win-inject.js
src/renderer/main/: index.html  index.js  preload.js  styles.css
src/renderer/settings/: settings-preload.js  settings.css  settings.html
src/shared/: deepgram.js  fireworks.js  gemini.js  groq.js  language-map.js  mistral.js  sambanova.js  voice-commands.js
src/shared/providers/: fireworks.js  groq.js
tauri-src/: Cargo.toml  tauri.conf.json
tauri-src/capabilities/: default.json
tauri-src/src/: audio_analyzer.rs  lib.rs  voice_commands.rs
tauri-src/src/commands/: mod.rs  settings.rs  streaming.rs  text_injection.rs  text_rewrite.rs  transcription.rs  vad.rs  window.rs
tauri-src/src/providers/: cartesia.rs  deepgram.rs  groq.rs  mod.rs  sambanova.rs
tauri-src/src/services/: clipboard_paste.rs  keyboard.rs  keyboard_inject.rs  mod.rs  vad_segmenter.rs
test/: cartesia_stt_test.html  cartesia_stt_test.js  mistral_test.js  server.js  test.html
ui/main/: audio-capture.js  audio-visualizer.js  index.html  main.js  recording-session.js  styles.css
ui/main/audio/: audio-capture.js  audio-processor.js  audio-visualizer.js
ui/main/providers/: base-provider.js  batch-provider.js  cartesia-provider.js  deepgram-provider.js  elevenlabs-provider.js  fireworks-provider.js  gemini-provider.js  groq-provider.js  mistral-provider.js  provider-factory.js  sambanova-provider.js  voxtral-provider.js
ui/overlay/: index.html
ui/settings/: index.html  settings.js  styles.css
ui/settings/components/: custom-words-list.js  dropdown.js  password-field.js  select-field.js  shortcut-input.js  sidebar.js  slider-field.js  toggle-switch.js
ui/shared/: api.js  constants.js  i18n.js  prompts.js  theme.css  tooltip.js  voice-commands.js
ui/tray-menu/: index.html  styles.css  tray-menu.js
(+27 files in other folders)
