[package]
name = "dictate"
version = "1.9.1"
description = "A Tauri-based dictation app"
authors = ["3choff"]
edition = "2021"

# Optimize for size
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization, slower compile
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handler

[lib]
name = "dictate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls", "http2"] }
enigo = "0.2"
raw-window-handle = "0.6"
base64 = "0.22"
urlencoding = "2.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
chrono = "0.4"
regex = "1"
# Audio visualization
rustfft = "6.4.0"
# Voice Activity Detection
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
