[package]
name = "dictate"
version = "0.1.0"
description = "A Tauri-based dictation app"
authors = ["3choff"]
edition = "2021"

[lib]
name = "dictate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
enigo = "0.2"
clipboard-win = "5.4"
